cluster/apps/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: radarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Radarr"
    gethomepage.dev/icon: radarr.svg
    gethomepage.dev/href: https://radarr.disablak.xyz
    gethomepage.dev/group: Media
    gethomepage.dev/pod-selector: "app=radarr"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - radarr.disablak.xyz
      secretName: radarr-tls
  rules:
    - host: radarr.disablak.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
